# logger

./: CMakeLists.txt  PreLoad.cmake  Readme.md  logger.code-workspace
src/: logger.hpp  test.cpp
